 * Battalion: Some texts in the mission panel were wrong and misleading
 * Construction Mode: Remove drill strike if added by weapon scheme (it's broken)
 * Capture the Flag: Fix many bugs caused by playing with >2 teams
 * Capture the Flag: Properly place flag when first hog uses kamikaze or TimeBox
 * Capture the Flag: Fix flag not being dropped when carrier uses piano strike

A Space Adventure:
 + Precise Shooting: Display collected ammo
 + Hard Flying: Display personal best at mission start
 + Killing the Specialists: Add event messages and graphical effects
 * Killing the Specialists: Fix very misleading hints in mission panel
 * Killing the Specialists: Fix number of rounds measured being way too low

A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 * Fix incorrect storytelling in mission descriptions
 * Mission 1: Fix error message spam when Leaks a Lot drowns
 * Mission 6: Fix cyborgs sometimes doing nothing for a full turn

Missions:
 + Target Practice: Re-center camera to hog when projectile is destroyed or drowns

Theme customization:
 + Add fallback music with fallback-music and fallback-sd-music
 * Fix green color channel on themes with sd-tint

Lua API:
 + New library: SimpleMission: Allows to create missions more easily
 + New call: WriteLnToChat(string): Add a line in the chat
 + New call: SetVampiric(bool): Toggle vampirism
 + New call: SetLaserSight(bool): Toggle laser sight
 + New call: GetWind(): Returns current wind (approximation) from -100 to 100
 + New call: GetTeamName(teamIdx): Returns name of team with given index (starts at 0)
 + New call: GetTeamIndex(teamname): Returns index of team with given name
 + New call: GetTeamClan(teamname): Returns clan of team with given name
 + New call: SpawnSupplyCrate(x, y, content, [, amount]): Spawn ammo or utility crate, depending on content
 + New call: HealHog(gearUid, healthBoost[, showMessage[, tint]]): Heal hedgehog with graphical effects and message